Fixing the Schema

--- a/app/views/forums/_forum.html.erb
+++ b/app/views/forums/_forum.html.erb
@@ -3,5 +3,9 @@
     <strong>Forum name:</strong>
     <%= forum.forum_name %>
   </p>
+  <p>
+    <strong>Forum description:</strong>
+    <%= forum.description %>
+  </p>
 
 </div>
