--- a/app/views/forums/_form.html.erb
+++ b/app/views/forums/_form.html.erb
@@ -14,6 +14,8 @@
   <div>
     <%= form.label :forum_name, style: "display: block" %>
     <%= form.text_field :forum_name %>
+    <%= form.label :description, style: "display: block" %>
+    <%= form.text_field :description %>
   </div>
 
   <div>
